--- a/viz.Rmd
+++ b/viz.Rmd
@@ -87,7 +87,7 @@ are as follows:
 - **bar plots** visualize comparisons of amounts
 - **histograms** visualize the distribution of one quantitative variable (i.e., all its possible values and how often they occur) \index{distribution}
 
-```{r plot-sketches, echo = FALSE, fig.width = 4.6, fig.height = 4.75, fig.align = 'center', fig.cap = "Examples of scatter, line and bar plots, as well as histograms."}
+```{r plot-sketches, echo = FALSE, fig.width = 4.5, fig.height = 4.65, fig.align = 'center', fig.cap = "Examples of scatter, line and bar plots, as well as histograms."}
 set.seed(1)
 
 scatter_plot <- tibble(x = seq(0.25, 10, by = 0.5) + rnorm(20, 1, 1.5),
@@ -505,7 +505,7 @@ We will begin with a scatter plot of the `mother_tongue` and `most_at_home` colu
 The resulting plot is shown in Figure \@ref(fig:03-mother-tongue-vs-most-at-home).
 \index{ggplot!geom\_point}
 
-```{r 03-mother-tongue-vs-most-at-home, fig.height=5, warning=FALSE, fig.cap = "Scatter plot of number of Canadians reporting a language as their mother tongue vs the primary language at home."}
+```{r 03-mother-tongue-vs-most-at-home, fig.height=5, fig.width = 4, warning=FALSE, fig.cap = "Scatter plot of number of Canadians reporting a language as their mother tongue vs the primary language at home."}
 ggplot(can_lang, aes(x = most_at_home, y = mother_tongue)) +
   geom_point()
 ``` 
@@ -519,7 +519,7 @@ make the axes labels on the plots more readable.
 \index{escape character} We should also increase the font size to further 
 improve readability.
 
-```{r 03-mother-tongue-vs-most-at-home-labs, fig.height=5, warning=FALSE, fig.cap = "Scatter plot of number of Canadians reporting a language as their mother tongue vs the primary language at home with x and y labels."}
+```{r 03-mother-tongue-vs-most-at-home-labs, fig.height=5, fig.width = 4, warning=FALSE, fig.cap = "Scatter plot of number of Canadians reporting a language as their mother tongue vs the primary language at home with x and y labels."}
 ggplot(can_lang, aes(x = most_at_home, y = mother_tongue)) +
   geom_point() +
   labs(x = "Language spoken most at home \n (number of Canadian residents)",
@@ -584,7 +584,7 @@ to put commas in these numbers to increase their readability.
 We can do this in R by passing the `label_comma` function (from the `scales` package)
 to the `labels` argument of the `scale_x_log10` and `scale_x_log10` functions.
 
-```{r 03-mother-tongue-vs-most-at-home-scale, message = FALSE, warning =  FALSE, fig.height=5, fig.cap = "Scatter plot of number of Canadians reporting a language as their mother tongue vs the primary language at home with log adjusted x and y axes."}
+```{r 03-mother-tongue-vs-most-at-home-scale, message = FALSE, warning =  FALSE, fig.height=5, fig.width = 4, fig.cap = "Scatter plot of number of Canadians reporting a language as their mother tongue vs the primary language at home with log adjusted x and y axes."}
 library(scales)
 
 ggplot(can_lang, aes(x = most_at_home, y = mother_tongue)) +
@@ -641,7 +641,7 @@ Finally, we will edit the visualization to use the percentages we just computed
 units). Figure \@ref(fig:03-mother-tongue-vs-most-at-home-scale-props) displays
 the final result.
 
-```{r 03-mother-tongue-vs-most-at-home-scale-props, fig.height=5, warning=FALSE, fig.cap = "Scatter plot of percentage of Canadians reporting a language as their mother tongue vs the primary language at home."}
+```{r 03-mother-tongue-vs-most-at-home-scale-props, fig.height=5, fig.width = 4,  warning=FALSE, fig.cap = "Scatter plot of percentage of Canadians reporting a language as their mother tongue vs the primary language at home."}
 ggplot(can_lang, aes(x = most_at_home_percent, y = mother_tongue_percent)) +
   geom_point() +
   labs(x = "Language spoken most at home \n (percentage of Canadian residents)",
@@ -698,7 +698,7 @@ that the `category` column should color the points. Adding this argument will
 color the points according to their group and add a legend at the side of the
 plot. 
 
-```{r 03-scatter-color-by-category, warning=FALSE, fig.height=5, fig.cap = "Scatter plot of percentage of Canadians reporting a language as their mother tongue vs the primary language at home colored by language category."}
+```{r 03-scatter-color-by-category, warning=FALSE, fig.height=5, fig.width = 4,  fig.cap = "Scatter plot of percentage of Canadians reporting a language as their mother tongue vs the primary language at home colored by language category."}
 ggplot(can_lang, aes(x = most_at_home_percent, 
                      y = mother_tongue_percent, 
                      color = category)) +
