--- a/clustering.Rmd
+++ b/clustering.Rmd
@@ -469,7 +469,8 @@ for (i in 1:4) {
                stroke = 1, 
                color = "black", 
                fill = cbpalette) +
-    annotate("text", x = -0.5, y = 1.5, label = paste0("Iteration ", i))
+    annotate("text", x = -0.5, y = 1.5, label = paste0("Iteration ", i), size = 5)+ 
+    theme(text = element_text(size = 14))
   
   if (i == 1 | i == 2) {
     plt_ctr <- plt_ctr +
@@ -502,7 +503,8 @@ for (i in 1:4) {
                stroke = 1, 
                color = "black", 
                fill = cbpalette) +
-    annotate("text", x = -0.5, y = 1.5, label = paste0("Iteration ", i))
+    annotate("text", x = -0.5, y = 1.5, label = paste0("Iteration ", i), size = 5)+ 
+    theme(text = element_text(size = 14))
 
   if (i == 1 | i ==2) {
     plt_lbl <- plt_lbl +
@@ -613,7 +615,7 @@ Figure \@ref(fig:10-toy-kmeans-bad-iter) shows what the iterations of K-means wo
 
 (ref:10-toy-kmeans-bad-iter) First five iterations of K-means clustering on the `penguin_data` example data set with a poor random initialization. Each pair of plots corresponds to an iteration. Within the pair, the first plot depicts the center update, and the second plot depicts the reassignment of data to clusters. Cluster centers are indicated by larger points that are outlined in black.
 
-```{r 10-toy-kmeans-bad-iter, echo = FALSE, warning = FALSE, fig.height = 6.75, fig.width = 8, fig.align = "center", fig.cap = "(ref:10-toy-kmeans-bad-iter)"}
+```{r 10-toy-kmeans-bad-iter, echo = FALSE, warning = FALSE, message = FALSE, fig.height = 6.75, fig.width = 8, fig.align = "center", fig.cap = "(ref:10-toy-kmeans-bad-iter)"}
 list_plot_cntrs <- vector(mode = "list", length = 5)
 list_plot_lbls <- vector(mode = "list", length = 5)
 
@@ -640,7 +642,8 @@ for (i in 1:5) {
                stroke = 1, 
                color = "black", 
                fill = cbpalette) +
-    annotate("text", x = -0.5, y = 1.5, label = paste0("Iteration ", i))
+    annotate("text", x = -0.5, y = 1.5, label = paste0("Iteration ", i), size = 5) + 
+    theme(text = element_text(size = 14))
 
   if (i == 1 | i == 2) {
     plt_ctr <- plt_ctr +
@@ -672,7 +675,8 @@ for (i in 1:5) {
                stroke = 1, 
                color = "black", 
                fill = cbpalette) +
-    annotate("text", x = -0.5, y = 1.5, label = paste0("Iteration ", i))
+    annotate("text", x = -0.5, y = 1.5, label = paste0("Iteration ", i), size = 5) + 
+    theme(text = element_text(size = 14))
 
   if (i == 1 | i == 2) {
     plt_lbl <- plt_lbl +
@@ -690,10 +694,10 @@ iter_plot_list <- c(list_plot_cntrs[1], list_plot_lbls[1],
                     list_plot_cntrs[5], list_plot_lbls[5])
 
 ggarrange(iter_plot_list[[1]] +
-               theme(axis.text.x = element_blank(),
+               theme(axis.text.x = element_blank(),  #remove x axis
                      axis.ticks.x = element_blank(),
                      axis.title.x = element_blank(), 
-                     plot.margin = margin(r = 2, b = 2)), 
+                     plot.margin = margin(r = 2, b = 2)), # change margins
           iter_plot_list[[2]] + 
                theme(axis.text.y = element_blank(),
                      axis.ticks.y = element_blank(),
@@ -740,7 +744,7 @@ ggarrange(iter_plot_list[[1]] +
                      axis.ticks.y = element_blank(),
                      axis.title.y = element_blank(), 
                      plot.margin = margin(l = 2, t = 2, b = 2)),  
-          ggplot() + theme_void(), ggplot() + theme_void(), ggplot() + theme_void(), ggplot() + theme_void(),
+          ggplot() + theme_void(), ggplot() + theme_void(), ggplot() + theme_void(), ggplot() + theme_void(), # adding third row of empty plots to change space between third and fourth row
           iter_plot_list[[9]] + 
                theme(plot.margin = margin(r = 2)),
           iter_plot_list[[10]] + 
@@ -748,7 +752,7 @@ ggarrange(iter_plot_list[[1]] +
                      axis.ticks.y = element_blank(),
                      axis.title.y = element_blank(), 
                      plot.margin = margin(l = 2)  ),
-         heights = c(4, 4, -1, 4),
+         heights = c(3, 3, -1, 3),
           ncol = 4)
 ```
 
